@@ -4,7 +4,9 @@ Changes to Version 2.0-0
 
   o Support for R Markdown, with script and Rmd tabs.
 
-  o Improved probability plots, plotDistr() convenience function.
+  o Improved probability plots. 
+
+  o Introduced plotDistr() and lineplot() convenience functions.
 
   o Calls to deprecated functions .find.package() and .path.package() replaced by find.package() and path.package() (suggestion of Brian Ripley).
 
